--- a/app/views/words/index.html.haml
+++ b/app/views/words/index.html.haml
@@ -1,2 +1,10 @@
-%h1 Index view
+%h1 Words
+%p
+We have
 = @words.count
+words in database
+%table
+	- @words.each do |word|
+		%tr
+			%td= word.value
+			%td= word.language
